--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
@@ -25,9 +26,14 @@
       background-color: #f2eae2;
     }
 
+    .product {
+      border-radius: 10px;
+    }
+
     .product,
     .product-description {
       background-color: white;
+      padding-left: 20px;
     }
 
     .product .product-name {
@@ -75,6 +81,24 @@
       color: #6C7289;
     }
 
+    .cart-button {
+      background-color: #3d8168;
+      color: white;
+      text-decoration: none;
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 48px;
+      font-weight: bold;
+      font-family: 'Montserrat';
+      border-radius: 8px;
+    }
+
+    .cart-button-icon {
+      margin: 1.0em;
+    }
+
     @media (max-width: 375px) {
       .product {
         width: 343px;
@@ -115,6 +139,10 @@
         display: none;
       }
 
+      .cart-button {
+        width: 236px;
+      }
+
     }
   </style>
 </head>
@@ -130,10 +158,14 @@
         Perfumer-Creator for the House of CHANEL.</span>
       <span class="price-discounted">$149.99</span>
       <span class="price">$169.99</span>
-      <div class="cart">
-        <span class="cart-icon"></span>
-        <span class="cart-text">Add to Cart</span>
-      </div>
+      <a href="javascript:;" class="cart-button">
+        <svg width="15" height="16" class="cart-button-icon" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M14.383 10.388a2.397 2.397 0 0 0-1.518-2.222l1.494-5.593a.8.8 0 0 0-.144-.695.8.8 0 0 0-.631-.28H2.637L2.373.591A.8.8 0 0 0 1.598 0H0v1.598h.983l1.982 7.4a.8.8 0 0 0 .799.59h8.222a.8.8 0 0 1 0 1.599H1.598a.8.8 0 1 0 0 1.598h.943a2.397 2.397 0 1 0 4.507 0h1.885a2.397 2.397 0 1 0 4.331-.376 2.397 2.397 0 0 0 1.12-2.021ZM11.26 7.99H4.395L3.068 3.196h9.477L11.26 7.991Zm-6.465 6.392a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Zm6.393 0a.8.8 0 1 1 0-1.598.8.8 0 0 1 0 1.598Z"
+            fill="#FFF" />
+        </svg>
+        Add to Cart
+      </a>
     </div>
 
 
